tests/bad-configs/inconsistent-outdent.errors
ERROR: inconsistent-outdent.config:4: inconsistent indentation
