tests/bad-configs/inconsistent-outdent.config
host alpha
     ssh-timeout 1
     volume root /
   ssh-timeout 2
